fix(amplify): quote header values and use supported headers format to fix YAML parse error

--- a/amplify.yml
+++ b/amplify.yml
@@ -8,31 +8,30 @@ frontend:
       commands: []
   artifacts:
     # Serve the repository root as the artifact
-    baseDirectory: .
+    baseDirectory: /
     files:
       - '**/*'
   cache:
     paths: []
-  customHeaders:
-    items:
-      - pattern: '/assets/*'
-        headers:
-          - key: Cache-Control
-            value: public, max-age=31536000, immutable
-      - pattern: '/*'
-        headers:
-          - key: X-Content-Type-Options
-            value: nosniff
-          - key: X-Frame-Options
-            value: SAMEORIGIN
-          - key: Referrer-Policy
-            value: strict-origin-when-cross-origin
-          - key: Permissions-Policy
-            value: geolocation=(), microphone=(), camera=()
-          - key: Strict-Transport-Security
-            value: max-age=31536000; includeSubDomains; preload
-          - key: Content-Security-Policy
-            value: default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://*.supabase.co; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https://*; font-src 'self' https://cdn.jsdelivr.net; connect-src 'self' https://*.supabase.co; frame-ancestors 'self';
+  headers:
+    - pattern: /assets/*
+      headers:
+        - key: Cache-Control
+          value: "public, max-age=31536000, immutable"
+    - pattern: /*
+      headers:
+        - key: X-Content-Type-Options
+          value: "nosniff"
+        - key: X-Frame-Options
+          value: "SAMEORIGIN"
+        - key: Referrer-Policy
+          value: "strict-origin-when-cross-origin"
+        - key: Permissions-Policy
+          value: "geolocation=(), microphone=(), camera()"
+        - key: Strict-Transport-Security
+          value: "max-age=31536000; includeSubDomains; preload"
+        - key: Content-Security-Policy
+          value: "default-src 'self'; script-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://*.supabase.co; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net; img-src 'self' data: https://*; font-src 'self' https://cdn.jsdelivr.net; connect-src 'self' https://*.supabase.co; frame-ancestors 'self';"
 redirects:
   # Pretty URLs mapping (200 rewrites)
   - source: /admin
